<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inp"
        android:layout_width="372dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/edit_text1"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/out"
        android:layout_width="299dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/text1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFEB3B"
        android:gravity="center"
        android:text="@string/button1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/out" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFEB3B"
        android:gravity="center"
        android:text="@string/button2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFEB3B"
        android:gravity="center"
        android:text="@string/button3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center"
        android:text="@string/button4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</android.support.constraint.ConstraintLayout>